@@ -1,5 +1,12 @@
 2008-11-05  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valabinaryexpression.vala:
+	* vala/valasemanticanalyzer.vala:
+
+	Move binary expression checking to BinaryExpression.check
+
+2008-11-05  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaassignment.vala:
 	* vala/valasemanticanalyzer.vala:
 
